# SIS-model

./: README.md  Range_simulations-m2.py  Run_simulations-m2.py  SIS_simulation_m2.py  pyproject.toml
