[tool.poetry]
name = "sis-model"
version = "0.1.0"
description = "Lorem Ipsum"
authors = ["Henk-Jan van der Molen <email>"]
license = "CC0 1.0 Universal"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.9.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
